# GitLasso

./: Cargo.toml  LICENSE  README.md
completions/: gitlasso.fish
src/: cli_options.rs  config.rs  discover.rs  main.rs  parallel_run.rs  path.rs  serial_run.rs
src/command/: completions.rs  context.rs  exec.rs  fetch.rs  git.rs  mod.rs  pull.rs  register.rs  status.rs  unregister.rs
src/tui/: table.rs
