[package]
name = "gitlasso"
authors = ["Kevin Mahoney <kevin@kevinmahoney.co.uk>"]
description = "Manage multiple Git repositories"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KMahoney/GitLasso"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
clap_complete = "4.5.33"
crossterm = "0.28.1"
directories = "5.0.1"
dirs = "5.0.1"
git2 = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
walkdir = "2.5.0"
